@@ -6520,6 +6520,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\config_debug.h"
+				>
+			</File>
+			<File
+				RelativePath="..\config_win32.h"
+				>
+			</File>
+			<File
 				RelativePath="..\Configurator.h"
 				>
 			</File>
@@ -6732,11 +6740,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\gui\vga.h"
+				RelativePath="..\VGA.h"
 				>
 			</File>
 			<File
-				RelativePath="..\VGA.h"
+				RelativePath="..\gui\vga.h"
 				>
 			</File>
 		</Filter>
